# smart_open

./: MANIFEST.in  setup.cfg  setup.py
smart_open/: io_utils.py  plugins.py  version.py
