[bdist_wheel]
# Declare we support Python 2 and 3 with the same code
universal = 1

[metadata]
author = Radim Rehurek
author_email = me@radimrehurek.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Distributed Computing
    Topic :: Database :: Front-Ends
description = Utils for streaming large files (S3, HDFS, GCS, gzip, bz2...)
download_url = http://pypi.python.org/pypi/smart_open
keywords = file streaming, s3, hdfs, gcs
license = MIT
license_file = LICENSE
long_description = file: README.rst
maintainer = Radim Rehurek
maintainer_email = me@radimrehurek.com
name = smart_open
platforms = any
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
url = https://github.com/piskvorky/smart_open
version = file: VERSION


[options]
include_package_data = true
install_requires =
    requests
    boto3
    google-cloud-storage
    six >= 1.10
    bz2file  ; python_version<"3.4"
packages = find:

[options.extras_require]
test =
    mock
    moto[server]
    pathlib2
    responses
    # Not used directly but allows boto GCE plugins to load.
    # https://github.com/GoogleCloudPlatform/compute-image-packages/issues/262
    google-compute-engine==2.8.12
    paramiko
    parameterizedtestcase
    pytest
    pytest-rerunfailures

[options.package_data]
smart_open.tests =
    test_data/*gz
